Fyllt på med text om ramverken

--- a/src/milligram.html
+++ b/src/milligram.html
@@ -45,12 +45,42 @@
         <div class="row">
           <div class="column">
             <h2>Vad är Milligram?</h2>
-        <p>Milligram är ett simpelt ramverk blablabla-..</p>
+        <p>Milligram är ett minimalistiskt ramverk vars syfte är att tillhandahålla en simpel och ren utgångspunkt 
+            för att designa webbplatser. Det är utformat för att vara lätt och snabbladdat med en storlek på endast 2kb. <br>
+            <br>
+            Detta ramverk fokuserar på att ge webbutvecklare grundläggande stilar och verktyg för att skapa egna webbplatser 
+            som är stilrena och effektiva. 
+            Milligram kan installeras med Bower, Yarn och npm. Det kan även inkluderas med som CDN.<br>
+            <br>
+            Länk till ramverkets webbplats finns <a href="https://milligram.io/">här</a>.
+        </p>
           </div>
           <div class="column"><h2>Vad är bra med Milligram?</h2>
-            <p>Det som är bra med Milligram är...</p>
+            <p><strong>Några av Milligrams fördelar:</strong>
+
+                <ul>
+                    <li>En minimalistisk design.</li>
+                    <li>Hög prestanda tack vare dess lilla filstorlek.</li>
+                    <li>Flexbox-baserat för att skapa flexibla och responsiva layouter.</li>
+                    <li>Använder mobile first-strategi.</li>
+                  </ul>
+            </p>
           </div>
-          
+        </div>
+          <div class="row">
+          <div class="column">
+            <h2>Personlig åsikt</h2>
+        <p>Mitt första intryck av Milligram är att det är ett lättsamt ramverk att inkludera om man vill ha en färdig grund 
+            till sin webbplats och "slippa" koda saker på egen hand. Till skillnad från större ramverk så får man lite mer flexibilitet över 
+        styling och övergripande layout. Det var enkelt att installera och inkludera och systemet med flexbox är smidigt.<br>
+        <br>
+            Jag hade gärna önskat mer dokumentation om css-regler samt att det fanns en "färdig" huvudmeny att utgå från. 
+            Som alltid med ramverk så är det knepigt i början och man testar mycket fram och tillbaka för att se hur saker och ting fungerar. <br>
+            <br>
+            Däremot kan jag se hur detta ramverk är smidigt att börja med, framför allt för att skapa sektioner med olika innehåll och att 
+            dessa anpassas per automatik med de färdiga css-reglerna man får. 
+        </p>
+          </div>
         </div>
       
            <!-- Tabell -->
