--- a/src/bootstrap.html
+++ b/src/bootstrap.html
@@ -42,48 +42,61 @@
     <!-- Container -->
     <div class="container shadow p-3 mb-5 bg-light-subtle border border-dark-subtle rounded-3">
         <h1 class="m-5">Bootstrap</h1>
-        <!-- Accordion -->
+
+        <!-- Accordion aka "fäll ut-sektioner"-->
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button class="accordion-button bg-success text-white border border-dark-subtle" type="button"
-                        data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
-                        aria-controls="collapseOne">
-                        <strong>Vad är Bootstrap?</strong>
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <strong>This is the first item's accordion body.</strong> It is shown by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
-                    </div>
+              <h2 class="accordion-header">
+                <button class="accordion-button bg-success text-white border border-dark-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <strong>Vad är Bootstrap?</strong>
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <p>Bootstrap är ett av de äldsta och mest populära CSS-ramverken och erbjuder 
+                        färdig CSS-kod och Javascript-funktionalitet. Ramverket innehåller funktioner som grid-system, 
+                        responsiv design, fördefinierade stilar för text, förbättrat utseende av formulär och tabeller 
+                        samt olika stilar för knappar. Det kan användas genom att ladda ned filerna direkt, installeras som ett npm-paket eller inkluderas via CDN.<br>
+                        <br>
+                        Det har ett simpelt cheat-sheet som webbutvecklare kan utgå från för att underlätta sitt arbete, samt 
+                        en mer omfattande dokumentation på Bootstraps egna webbplats med mer information om hur det används. <br>
+                        <br>
+                        Länk till Bootstraps webbplats finns <a href="https://getbootstrap.com/">här</a>. <br>
+                        Länk till Bootstraps cheat-sheet finns <a href="https://hackerthemes.com/bootstrap-cheatsheet/#input-group-lg">här</a>.
+                    </p>
                 </div>
+              </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button class="accordion-button collapsed bg-success text-white border border-dark-subtle"
-                        type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
-                        aria-controls="collapseTwo">
-                        <strong>Vad är bra med Bootstrap?</strong>
-                    </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
-                    </div>
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed bg-success text-white border border-dark-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <strong>Vad är bra med Bootstrap?</strong>
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Förenklad webbuveckling.</li>
+                        <li class="list-group-item">Färdiga lösningar för vanliga designelement.</li>
+                        <li class="list-group-item">Responsiv design.</li>
+                      </ul>
                 </div>
+              </div>
             </div>
-
-        </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed bg-success text-white border border-dark-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <strong>Personlig åsikt</strong>
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+          </div>
+        
 
         <!-- Tabell -->
 
