--- a/src/bootstrap.html
+++ b/src/bootstrap.html
@@ -39,7 +39,8 @@
             </div>
         </div>
     </nav>
-    <!-- Container -->
+
+    <!-- Container med huvudinnehåll -->
     <div class="container shadow p-3 mb-5 bg-light-subtle border border-dark-subtle rounded-3">
         <h1 class="m-5">Bootstrap</h1>
 
@@ -58,7 +59,7 @@
                         responsiv design, fördefinierade stilar för text, förbättrat utseende av formulär och tabeller 
                         samt olika stilar för knappar. Det kan användas genom att ladda ned filerna direkt, installeras som ett npm-paket eller inkluderas via CDN.<br>
                         <br>
-                        Det har ett simpelt cheat-sheet som webbutvecklare kan utgå från för att underlätta sitt arbete, samt 
+                        Det har ett smidigt cheat-sheet som kan användas för för att underlätta utvecklingen, samt 
                         en mer omfattande dokumentation på Bootstraps egna webbplats med mer information om hur det används. <br>
                         <br>
                         Länk till Bootstraps webbplats finns <a href="https://getbootstrap.com/">här</a>. <br>
@@ -91,7 +92,19 @@
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <p>Mitt första intryck av Bootstrap är att det har många roliga funktioner så som accordions ("fäll ut-sektioner"), carousels (bildspel), modals (liknande pop up) och färdiga navbars (huvudmenyer).
+                    Det finns dessutom många fler roliga komponenter att använda sig av, bland annat spinners, cards, scrollspy och badges. <br>
+                    <br>
+                    Utöver detta gillar jag det faktum att man får färdig kod för responsivitet, att man enkelt kan applicera klasser för att justera utseendet på olika komponenter och att 
+                    det var enkelt att inkludera via CDN. Jag testade att installera det som npm-paket först men jag upplevde att det blev väldigt många filer att hålla reda på och filstrukturen överlag kändes 
+                    lite mer komplicerad på det viset. <br>
+                    <br>
+                    Jag hade gärna velat utforska Bootstrap lite mer för att förstå bättre hur det används och framför allt när det är fördelaktigt att använda det. 
+                    Att man får mycket "gratis" med ett ramverk är väldigt tacksamt och kan snabba på utvecklingen, men jag får känslan av att man behöver vara mer påläst 
+                    om det ramverket man ska använda för att faktiskt kunna utnyttja det fullt ut. Om man väl vet hur det fungerar ser jag att man nog kan vara väldigt kreativ med det.<br>
+                    <br>
+                    Sammanfattningsvis kul att testa på ett större ramverk och testa sig fram med de olika komponenterna och klasserna som kommer på köpet!
+                  </p>
                 </div>
               </div>
             </div>
@@ -135,6 +148,12 @@
                         <td>Per</td>
                         <td>Ja</td>
                         <td>Mitt jobb använder Bootstrap till deras webbplats</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">5</th>
+                        <td>Andreas</td>
+                        <td>Nej</td>
+                        <td>Jag har aldrig hört talas om Bootstrap, jag är snickare..</td>
                     </tr>
                 </tbody>
             </table>
