--- a/src/milligram.html
+++ b/src/milligram.html
@@ -37,7 +37,7 @@
 </div>
 
  
-   
+   <!-- Container med huvudinnehåll -->
     <div class="container">
         <h1>Milligram</h1>
 
@@ -50,7 +50,7 @@
             <br>
             Detta ramverk fokuserar på att ge webbutvecklare grundläggande stilar och verktyg för att skapa egna webbplatser 
             som är stilrena och effektiva. 
-            Milligram kan installeras med Bower, Yarn och npm. Det kan även inkluderas med som CDN.<br>
+            Milligram kan installeras med Bower, Yarn och npm samt inkluderas med som CDN.<br>
             <br>
             Länk till ramverkets webbplats finns <a href="https://milligram.io/">här</a>.
         </p>
@@ -118,6 +118,12 @@
                 <td>29</td>
                 <td>Jättelång</td>
                 <td>Jag har jättemycket kläder</td>
+              </tr>
+              <tr>
+                <td>Frida</td>
+                <td>18</td>
+                <td>Jättekort</td>
+                <td>Fin webbplats! Jag gillar verkligen lila</td>
               </tr>
             </tbody>
           </table>
