--- a/src/milligram.html
+++ b/src/milligram.html
@@ -27,10 +27,10 @@
     <nav class="navigation">
     <div class="row">
       <div class="column"></div>
-      <div class="column"><li><a href="index.html">Hem</a></li></div>
-      <div class="column"><li><a href="bootstrap.html">Bootstrap</a></li></div>
-      <div class="column"><li><a href="milligram.html" class="active">Milligram</a></li></div>
-      <div class="column"><li><a href="publicering.html">Publicering</a></li></div>
+      <div class="column"><a href="index.html">Hem</a></div>
+      <div class="column"><a href="bootstrap.html">Bootstrap</a></div>
+      <div class="column"><a href="milligram.html" class="active">Milligram</a></div>
+      <div class="column"><a href="publicering.html">Publicering</a></div>
       <div class="column"></div>
     </div>
   </nav>
