--- a/src/publicering.html
+++ b/src/publicering.html
@@ -16,26 +16,24 @@
 
 <body>
 
-     <!-- Huvudmeny -->
-     <div class="navigation-container">
+       <!-- Huvudmeny -->
+<div class="navigation-container">
+  <!-- Knapp för att öppna/stänga meny på små skärmar -->
+  <input type="checkbox" id="menu-toggle">
 
-      <!-- Knapp för att öppna/stänga meny på små skärmar -->
-      <input type="checkbox" id="menu-toggle">
-  
-       <!-- Hamburgerikon för menyn på små skärmar -->
-    <label for="menu-toggle" class="menu-icon">&#9776;</label>
-
-      <nav>
-      <div class="row">
-        <div class="column"></div>
-        <div class="column"><li><a href="index.html">Hem</a></li></div>
-        <div class="column"><li><a href="bootstrap.html">Bootstrap</a></li></div>
-        <div class="column"><li><a href="milligram.html">Milligram</a></li></div>
-        <div class="column"><li><a href="publicering.html" class="active">Publicering</a></li></div>
-        <div class="column"></div>
-      </div>
-    </nav>
+   <!-- Hamburgerikon för menyn på små skärmar -->
+<label for="menu-toggle" class="menu-icon">&#9776;</label>
+  <nav class="navigation">
+  <div class="row">
+    <div class="column"></div>
+    <div class="column"><a href="index.html">Hem</a></div>
+    <div class="column"><a href="bootstrap.html">Bootstrap</a></div>
+    <div class="column"><a href="milligram.html">Milligram</a></div>
+    <div class="column"><a href="publicering.html" class="active">Publicering</a></div>
+    <div class="column"></div>
   </div>
+</nav>
+</div>
     
 
     <div class="container">
